# tmxr

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  question.md
.github/workflows/: ci.yml  release-plz.yml  tmux-smoke.yml
docs/: architecture.md  development.md  releasing.md  testing.md
docs/adr/: 0000-template.md  0001-use-cargo-as-the-build-system.md  0002-minimum-supported-tmux-version.md  0003-per-project-config-discovery.md  0004-global-fallback-config.md  README.md
scripts/: check.sh  tmux-smoke-test.sh
src/: cli.rs  completions.rs  config.rs  doctor.rs  lib.rs  main.rs  session.rs  terminal.rs  test_support.rs  tmux.rs
