[package]
name = "tmxr"
version = "0.2.0"
edition = "2024"
description = "Opinionated tmux workspace launcher."
license = "MIT"
repository = "https://github.com/slaptijack/tmxr"

[[bin]]
name = "tmxr"
path = "src/main.rs"

[lib]
name = "tmxr"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
